CSSOM test for serializing font-variant fails https://bugs.webkit.org/show_bug.cgi?id=226770

Patch by Rob Buis <rbuis@igalia.com> on 2021-06-21
Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Update improved test result.

* web-platform-tests/css/css-fonts/parsing/font-variant-east-asian-invalid-expected.txt:
* web-platform-tests/css/css-fonts/parsing/font-variant-valid-expected.txt:
* web-platform-tests/css/cssom/serialize-values-expected.txt:

Source/WebCore:

Implement font-variant serializing according to:
https://drafts.csswg.org/cssom/#serializing-css-values

* css/StyleProperties.cpp:
(WebCore::StyleProperties::getPropertyValue const):
(WebCore::StyleProperties::appendFontLonghandValueIfExplicit const):
(WebCore::StyleProperties::fontVariantValue const):
* css/StyleProperties.h:
* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeFontVariantEastAsian):
(WebCore::CSSPropertyParser::consumeFontVariantShorthand):

LayoutTests:

* css3/font-variant-parsing-expected.txt:
* css3/font-variant-parsing.html:

Canonical link: https://commits.webkit.org/238990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279070 268f45cc-cd09-0410-ab3c-d52691b4dbfc